5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1613_2043.log
== TEST (2019-03-30 22:10:24) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4(float(input("a4"))
media=(a1*1+a2*2+a3*3+a4*4)/4
print(round(media, 2))
-- ERROR:
File "XXXX", line 5
    media=(a1*1+a2*2+a3*3+a4*4)/4
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:11:04) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=(float(input("a4"))
media=(a1*1+a2*2+a3*3+a4*4)/4
print(round(media, 2))
-- ERROR:
File "XXXX", line 5
    media=(a1*1+a2*2+a3*3+a4*4)/4
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:11:31) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1+a2*2+a3*3+a4*4)/4
print(round(media, 2))
-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:11:44) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1+a2*2+a3*3+a4*4)/4
print(round(media, 2))
-- EXECUTION TIME:
0.220578
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
20.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
17.5
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
19.84
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:12:49) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1+a2*2+a3*3+a4*4)//4
print(round(media, 2))
-- OUTPUT:
20.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:13:02) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1+a2*2+a3*3+a4*4)//4
print(round(media, 2))
-- EXECUTION TIME:
0.170198
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
20.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
17.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
19.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:14:10) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1+a2*2+a3*3+a4*4)/4
print(round(media, 2))
-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:14:33) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1+a2*2+a3*3+a4*4)/4
print(round(media, 2))
-- EXECUTION TIME:
0.128822
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
20.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
17.5
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
19.84
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:15:23) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1+a2*2+a3*3+a4*4)/4
print(round(media, 2))
-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:15:49) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1+a2*2+a3*3+a4*4)/4
print(round(media, 2))
-- EXECUTION TIME:
0.188193
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
20.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
17.5
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
19.84
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:16:14) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1+a2*2+a3*3+a4*4)//4
print(round(media, 2))
-- OUTPUT:
20.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:16:37) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1+a2*2+a3*3+a4*4)//4
print(round(media, 2))
-- EXECUTION TIME:
0.176947
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
20.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
17.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
19.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:29:45) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1)+(a2*2)+(a3*3)+(a4*4)/4
print(round(media, 2))
-- OUTPUT:
55.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:30:25) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1)+(a2*2)+(a3*3)+(a4*4)/4
print(round(media, 2))
-- EXECUTION TIME:
0.213451
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
55.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
49.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
52.39
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:30:36) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1)+(a2*2)+(a3*3)+(a4*4)/4
print(round(media, 2))
-- OUTPUT:
55.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:31:21) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1)+(a2*2)+(a3*3)+(a4*4)/4
print(round(media, 2))
-- EXECUTION TIME:
0.290202
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
55.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
49.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
52.39
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:31:36) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1)+(a2*2)+(a3*3)+(a4*4)/4
print(round(media, 2))
-- OUTPUT:
55.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:32:40) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1)+(a2*2)+(a3*3)+(a4*4)/4
print(round(media, 2))
-- EXECUTION TIME:
0.173739
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
55.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
49.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
52.39
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:34:06) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1)+(a2*2)+(a3*3)+(a4*4)/10
print(round(media, 2))
-- OUTPUT:
49.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:34:20) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1)+(a2*2)+(a3*3)+(a4*4)/10
print(round(media, 2))
-- EXECUTION TIME:
0.211096
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
49.6
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
44.8
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
47.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:34:55) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1)+(a2*2)+(a3*3)+(a4*4)/10
print(round(media, 2))
-- OUTPUT:
49.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:34:56) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1)+(a2*2)+(a3*3)+(a4*4)/10
print(round(media, 2))
-- OUTPUT:
49.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:34:59) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1)+(a2*2)+(a3*3)+(a4*4)/10
print(round(media, 2))
-- OUTPUT:
49.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:35:20) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1)+(a2*2)+(a3*3)+(a4*4)/10
print(round(media, 2))
-- EXECUTION TIME:
0.15151
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
49.6
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
44.8
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
47.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:36:05) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1)+(a2*2)+(a3*3)+(a4*4)/10
print(round(media, 2))
-- OUTPUT:
49.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:36:29) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1)+(a2*2)+(a3*3)+(a4*4)/10
print(round(media, 2))
-- EXECUTION TIME:
0.157031
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
49.6
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
44.8
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
47.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:43:14) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1)+(a2*2)+(a3*3)+(a4*4)/10
print(round(media, 2))
-- OUTPUT:
49.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:43:41) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1)+(a2*2)+(a3*3)+(a4*4)/10
print(round(media, 2))
-- EXECUTION TIME:
0.139853
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
49.6
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
44.8
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
47.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:54:08) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1)+(a2*2)+(a3*3)+(a4*4)/10
print(round(media, 2))
-- OUTPUT:
49.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:55:43) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1)+(a2*2)+(a3*3)+(a4*4)/10
print(round(media, 2))
-- OUTPUT:
49.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:55:58) 
-- CODE:
a1=float(input("a1"))
a2=float(input("a2"))
a3=float(input("a3"))
a4=float(input("a4"))
media=(a1*1)+(a2*2)+(a3*3)+(a4*4)/10
print(round(media, 2))
-- EXECUTION TIME:
0.275166
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
49.6
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
44.8
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
47.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:07:17) 
-- CODE:
n1=float(input("n1"))
n2=float(input("n2"))
n3=float(input("n3"))
n4=float(input("n4"))
p1=1
p2=2
p3=3
p4=4
media=n1*p1+n2*p2+n3*p3+n4*p4
print(round(media,2))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:07:33) 
-- CODE:
n1=float(input("n1"))
n2=float(input("n2"))
n3=float(input("n3"))
n4=float(input("n4"))
p1=1
p2=2
p3=3
p4=4
media=n1*p1+n2*p2+n3*p3+n4*p4
print(round(media,2))
-- EXECUTION TIME:
0.179568
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
82.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
70.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
79.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:08:35) 
-- CODE:
n1=float(input("n1"))
n2=float(input("n2"))
n3=float(input("n3"))
n4=float(input("n4"))
media=(n1*1)+(n2*2)+(n3*3)+(n4*4)
print(media)
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:08:52) 
-- CODE:
n1=float(input("n1"))
n2=float(input("n2"))
n3=float(input("n3"))
n4=float(input("n4"))
media=(n1*1)+(n2*2)+(n3*3)+(n4*4)
print(media)
-- EXECUTION TIME:
0.133866
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
82.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
70.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
79.36000000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:09:26) 
-- CODE:
n1=float(input("n1"))
n2=float(input("n2"))
n3=float(input("n3"))
n4=float(input("n4"))
media=(n1*1)+(n2*2)+(n3*3)+(n4*4)
print(round(media,2))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:09:37) 
-- CODE:
n1=float(input("n1"))
n2=float(input("n2"))
n3=float(input("n3"))
n4=float(input("n4"))
media=(n1*1)+(n2*2)+(n3*3)+(n4*4)
print(round(media,2))
-- EXECUTION TIME:
0.17791
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
82.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
70.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
79.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:09:58) 
-- CODE:
n1=float(input("n1"))
n2=float(input("n2"))
n3=float(input("n3"))
n4=float(input("n4"))
media=(n1*1)+(n2*2)+(n3*3)+(n4*4)/10
print(round(media,2))
-- OUTPUT:
49.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:10:12) 
-- CODE:
n1=float(input("n1"))
n2=float(input("n2"))
n3=float(input("n3"))
n4=float(input("n4"))
media=(n1*1)+(n2*2)+(n3*3)+(n4*4)/10
print(round(media,2))
-- EXECUTION TIME:
0.125676
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
49.6
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
44.8
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
47.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:50:44) 
-- CODE:
n1=float(input("n1"))
n2=float(input("n2"))
n3=float(input("n3"))
n4=float(input("n4"))
media=(n1*1)+(n2*2)+(n3*3)+(n4*4)/10
print(round(media,2))
-- OUTPUT:
49.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:51:01) 
-- CODE:
n1=float(input("n1"))
n2=float(input("n2"))
n3=float(input("n3"))
n4=float(input("n4"))
media=(n1*1)+(n2*2)+(n3*3)+(n4*4)/10
print(round(media,2))
-- OUTPUT:
49.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:51:12) 
-- CODE:
n1=float(input("n1"))
n2=float(input("n2"))
n3=float(input("n3"))
n4=float(input("n4"))
media=(n1*1)+(n2*2)+(n3*3)+(n4*4)/10
print(round(media,2))
-- EXECUTION TIME:
0.130687
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
49.6
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
44.8
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
47.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:51:55) 
-- CODE:
n1=float(input("n1"))
n2=float(input("n2"))
n3=float(input("n3"))
n4=float(input("n4"))
media=(n1*1)+(n2*2)+(n3*3)+(n4*4)/10
print(round(media,2))
-- OUTPUT:
49.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:52:09) 
-- CODE:
n1=float(input("n1"))
n2=float(input("n2"))
n3=float(input("n3"))
n4=float(input("n4"))
media=(n1*1)+(n2*2)+(n3*3)+(n4*4)/10
print(round(media,2))
-- EXECUTION TIME:
0.171945
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
49.6
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
44.8
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
47.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:54:20) 
-- CODE:
n1=float(input("n1"))
n2=float(input("n2"))
n3=float(input("n3"))
n4=float(input("n4"))
p1=1
p2=2
p3=3
p4=4
media=(n1*p1)+(n2*p2)+(n3*p3)+(n4*p4)/10
print(round(media,2))
-- OUTPUT:
49.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:54:33) 
-- CODE:
n1=float(input("n1"))
n2=float(input("n2"))
n3=float(input("n3"))
n4=float(input("n4"))
p1=1
p2=2
p3=3
p4=4
media=(n1*p1)+(n2*p2)+(n3*p3)+(n4*p4)/10
print(round(media,2))
-- EXECUTION TIME:
0.186656
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
49.6
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
44.8
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
47.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:56:22) 
-- CODE:
n1=float(input("n1"))
n2=float(input("n2"))
n3=float(input("n3"))
n4=float(input("n4"))
p1=1
p2=2
p3=3
p4=4
media=(n1*p1)+(n2*p2)+(n3*p3)+(n4*p4)/10
print(round(media,2))
-- OUTPUT:
49.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:56:41) 
-- CODE:
n1=float(input("n1"))
n2=float(input("n2"))
n3=float(input("n3"))
n4=float(input("n4"))
p1=1
p2=2
p3=3
p4=4
media=(n1*p1)+(n2*p2)+(n3*p3)+(n4*p4)/10
print(round(media,2))
-- EXECUTION TIME:
0.155584
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
49.6
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
44.8
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
47.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:58:00) 
-- CODE:
n1=float(input("n1"))
n2=float(input("n2"))
n3=float(input("n3"))
n4=float(input("n4"))
p1=1
p2=2
p3=3
p4=4
media=((n1*p1)+(n2*p2)+(n3*p3)+(n4*p4))/10
print(round(media,2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:58:12) 
-- CODE:
n1=float(input("n1"))
n2=float(input("n2"))
n3=float(input("n3"))
n4=float(input("n4"))
p1=1
p2=2
p3=3
p4=4
media=((n1*p1)+(n2*p2)+(n3*p3)+(n4*p4))/10
print(round(media,2))
-- EXECUTION TIME:
0.13471
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
